Stop using .color() where possible and small improvements here and there